--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     git second add
 
     hlw how are you
-    i am fine and you 
+    i am fine and you
+
+    i will be pushing the code 
 </body>
 </html>
