--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     hlw how are you
     i am fine and you
 
-    i will be pushing the code 
+    i will be pushing the code
+
+    testing the git fetch 
 </body>
 </html>
